<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lp.xgroup.Login" >

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">
    
    	<TextView
        	android:id="@+id/login_tv_usuario"
       	 	style="@style/texto"
        	android:text="@string/usuario" />
    	<EditText 
    	    android:id="@+id/login_et_usuario"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="Ex: LeonardoPalis"
    	    />
        	
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">
    
    	<TextView
        	android:id="@+id/login_tv_senha"
       	 	style="@style/texto"
        	android:text="@string/senha" />

    	<EditText
    	    android:id="@+id/login_et_senha"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:hint="Ex: 1234"
    	    android:inputType="textPassword" />
        	
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">
    
    	<Button 
    	    android:id="@+id/login_bt_entrar"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/entrar"
    	    android:layout_weight="1"
    	    />
        	
    </LinearLayout>

    <Button
        android:id="@+id/login_bt_cadastrar"
        android:layout_width="wrap_content"
        android:onClick="cadastrarButton"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar" />

</LinearLayout>
